# ticket-2408

./: .env.sample  .gitignore  00-env.sh  01-start-gateway.sh  02-stop-gateway.sh  03-start-gateway-ci.sh  04-stop-gateway-ci.sh  Cargo.toml  Makefile  README.md  SSRF.txt  auth.json.template  biome.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run-rust-test.sh  run-scenarios.sh  ssrf-allowlist.yaml  ssrf-bypass-attempts.yaml  ssrf-cloud-metadata.yaml  ssrf-dns-rebinding.yaml  ssrf-integration.yaml  ssrf-localhost.yaml  ssrf-master-workflow.yaml  ssrf-private-ips.yaml  ssrf-protocols.yaml  start-gateway.sh  start-recording.sh  start.sh  test-bruno.sh  test-playwrite.sh  test-resources.sh
bruno-scenarios/: 01-aws-metadata.bru  02-private-ips.bru  03-localhost.bru  04-dangerous-protocols.bru  TC-SSRF-001-aws-01.bru  TC-SSRF-001-aws-02.bru  TC-SSRF-01-03.bru  TC-SSRF-01-create.bru  TC-SSRF-02-delete.bru  TC-SSRF-998-get-rs.bru  TC-SSRF-999-del-rs.bru  bruno.json  collection.bru  data.csv  run-bruno-tests.sh
bruno-smoke-test/: 01-health.bru  02-add-resource.bru  03-get-resources.bru  04-del-resources.bru  bruno.json  bruno.json.backup  health-bruno.sh  health.bru  health.bru.backup  health.yml  results.html  smoke-test.sh  test-health.sh
bruno-ssrf-tests/: 01-aws-metadata.bru  02-private-ips.bru  03-localhost.bru  04-dangerous-protocols.bru  README.md  bruno.env  bruno.json  run-tests.sh
smoke-hurl/: smoke-hurl.sh  smoke-test.hurl
smoke-test/: 00-env.sh  test-add-resource.sh  test-health.sh  test-resources.sh
src/: lib.rs
(+5 files in other folders)
